--- a/team-ict.html
+++ b/team-ict.html
@@ -97,7 +97,7 @@
       </div>
       <div class="choice">
         <img src="./img/Evos_Ferxic_S9.png" alt="">
-        <h2><b>PLAYER NOT FOUND</b> <br> <span>ROLE</span></h2>
+        <h2><b>Player not founds</b> <br> <span>ROLE</span></h2>
       </div>
 
 
