--- a/index.html
+++ b/index.html
@@ -200,9 +200,12 @@
             </div>
 
         </div>
-        <div class="view-button">
-            <h2>View More</h2>
-        </div>
+        <a href="news.html">
+            <div class="view-button">
+                <h2>View More</h2>
+            </div>
+        </a>
+
     </section>
     <!-- NEWS SECTION SELESAI -->
 
@@ -238,10 +241,11 @@
                 </div>
             </div>
         </div>
-        <div class="view-button">
-            <h2>View More</h2>
-        </div>
-        <div></div>
+        <a href="https://www.youtube.com/@teamvagosesports772">
+            <div class="view-button">
+                <h2>View More</h2>
+            </div>
+        </a>
     </section>
     <!-- HIGHLIGHT SECTION SELESAI -->
 
@@ -280,10 +284,11 @@
                 </div>
             </div>
         </div>
-        <div class="view-button">
-            <h2>View More</h2>
-        </div>
-        <div></div>
+        <a href="SHOP.html">
+            <div class="view-button">
+                <h2>View More</h2>
+            </div>
+        </a>
     </section>
     <!-- SHOP SECTION SELESAI-->
 
@@ -318,6 +323,7 @@
         </div>
     </section>
     <!-- FOOTER SECTION SELESAI -->
+    <script src="./script.js"></script>
 </body>
 
 </html>
