--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
             <h1>WELCOME TO<br><span>THE BEST E-SPORTS TEAM IN BALI</span></h1>
             <h2>Rise to Victory: Knights of the Digital Arena!</h2>
         </div>
-        <img src="image/ourteamnew.png" alt="" class="ourteam">
+        <a href="teampage1.html">
+            <img src="image/ourteamnew.png" alt="" class="ourteam">
+        </a>
         <!-- HERO CONTENT SELESAI -->
     </section>
     <!-- HERO SECTION SELESAI -->
