--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <section class="hero-section">
         <!-- NAVBAR SECTION -->
         <div class="hero-navbar">
-            <a href="index.html"><img src="image/logo.png" alt=""></a>
+            <a href="index.html" class="hero-navbar-img"><img src="image/logo.png" alt=""></a>
             <ul class="ul-navbar">
                 <a href="news.html">
                     <li class="news-start">News</li>
@@ -33,8 +33,8 @@
                 <a href="about.html">
                     <li>About</li>
                 </a>
-                <a href="SHOP.html">
-                    <li><span>VAGOS OFFICIAL SHOP</span></li>
+                <a href="SHOP.html" class="hero-navbar-shop">
+                    <li>VAGOS OFFICIAL SHOP</li>
                 </a>
             </ul>
         </div>
@@ -44,10 +44,10 @@
         <div class="hero-content">
             <h1>WELCOME TO<br><span>THE BEST E-SPORTS TEAM IN BALI</span></h1>
             <h2>Rise to Victory: Knights of the Digital Arena!</h2>
+            <!-- <a href="teampage1.html">
+                <img src="image/ourteamnew.png" alt="" >
+            </a> -->
         </div>
-        <a href="teampage1.html">
-            <img src="image/ourteamnew.png" alt="" class="ourteam">
-        </a>
         <!-- HERO CONTENT SELESAI -->
     </section>
     <!-- HERO SECTION SELESAI -->
@@ -67,7 +67,7 @@
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. At asperiores possimus quibusdam excepturi
                     aperiam, rerum ipsum similique iste facere sapiente voluptates vero facilis aliquid inventore
                     debitis
-                    eaque, suscipit dicta? Consequuntur. <br>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    eaque, suscipit dicta? Consequuntur. <br><br>Lorem ipsum dolor sit amet consectetur adipisicing elit.
                     Beatae
                     nisi dolorem accusantium maxime. Ab ratione saepe quam consequuntur vel, doloribus, repudiandae
                     numquam debitis temporibus ut distinctio nobis, architecto laborum dolor!</p>
@@ -93,10 +93,13 @@
                     <img src="image/pubg team.png" alt="">
                 </div>
                 <div class="teams">
-                    <img src="image/teams1.png" alt="">
+                    <img src="image/ff team.png" alt="">
                 </div>
                 <div class="teams">
-                    <img src="image/teams1.png" alt="">
+                    <img src="image/ml team.png" alt="">
+                </div>
+                <div class="teams">
+                    <img src="image/pubg team.png" alt="">
                 </div>
             </div>
         </div>
@@ -223,23 +226,24 @@
             <div class="highlight-card">
                 <img src="image/video1.jpg" alt="">
                 <div class="highlight-card-desc">
-                    <p class="desc-views">1k Views&nbsp;</p>
-                    <p class="desc-recent">5 hour ago</p>
+                    <div><p class="desc-views">1k Views&nbsp;</p></div>
+                    <div class="highlight-card-desc-end"><p class="desc-recent">5 hour ago</p></div>
+                    
                 </div>
 
             </div>
             <div class="highlight-card">
                 <img src="image/video2.jpg" alt="">
                 <div class="highlight-card-desc">
-                    <p class="desc-views">1k Views</p>
-                    <p class="desc-recent">5 hour ago</p>
+                    <div><p class="desc-views">1k Views&nbsp;</p></div>
+                    <div class="highlight-card-desc-end"><p class="desc-recent">5 hour ago</p></div>
                 </div>
             </div>
             <div class="highlight-card">
                 <img src="image/video3.jpg" alt="">
                 <div class="highlight-card-desc">
-                    <p class="desc-views">1k Views&nbsp;</p>
-                    <p class="desc-recent">5 hour ago</p>
+                    <div><p class="desc-views">1k Views&nbsp;</p></div>
+                    <div class="highlight-card-desc-end"><p class="desc-recent">5 hour ago</p></div>
                 </div>
             </div>
         </div>
@@ -318,7 +322,7 @@
             <img src="image/youtube.png" alt="" />
             <img src="image/tiktok.png" alt="" />
             <img src="image/instagram.png" alt="" /><br />
-            <h2>DOWNLOAD APP</h2>
+            <a target="_blank" href="https://play.google.com/store/apps/details?id=com.studiokami.vagos"><h2>DOWNLOAD APP</h2></a>
         </div>
         <div class="footer-copyright">
             <h2>Copyright TEAM VAGOS ID 2023</h2>
