--- a/partners1.html
+++ b/partners1.html
@@ -20,7 +20,7 @@
     <section class="partners-section">
         <!-- NAVBAR SECTION -->
         <div class="hero-navbar">
-            <a href="index.html"><img src="image/logo.png" alt=""></a>
+            <a href="index.html" class="hero-navbar-img"><img src="image/logo.png" alt=""></a>
             <ul class="ul-navbar">
                 <a href="news.html">
                     <li class="news-start">News</li>
@@ -34,7 +34,7 @@
                 <a href="about.html">
                     <li>About</li>
                 </a>
-                <a href="SHOP.html">
+                <a href="SHOP.html" class="hero-navbar-shop">
                     <li><span>VAGOS OFFICIAL SHOP</span></li>
                 </a>
             </ul>
