--- a/team-ict.html
+++ b/team-ict.html
@@ -20,25 +20,25 @@
 <body class="custom-btn">
   <!-- navbar begin -->
   <div class="hero-navbar">
-    <a href="index.html"><img src="image/logo.png" alt=""></a>
+    <a href="index.html" class="hero-navbar-img"><img src="image/logo.png" alt=""></a>
     <ul class="ul-navbar">
-      <a href="news.html">
-        <li class="news-start">News</li>
-      </a>
-      <a href="teampage1.html">
-        <li>Teams</li>
-      </a>
-      <a href="partners1.html">
-        <li>Partners</li>
-      </a>
-      <a href="about.html">
-        <li>About</li>
-      </a>
-      <a href="SHOP.html">
-        <li><span>VAGOS OFFICIAL SHOP</span></li>
-      </a>
+        <a href="news.html">
+            <li class="news-start">News</li>
+        </a>
+        <a href="teampage1.html">
+            <li>Teams</li>
+        </a>
+        <a href="partners1.html">
+            <li>Partners</li>
+        </a>
+        <a href="about.html">
+            <li>About</li>
+        </a>
+        <a href="SHOP.html" class="hero-navbar-shop">
+            <li><span>VAGOS OFFICIAL SHOP</span></li>
+        </a>
     </ul>
-  </div>
+</div>
   <!-- navbar end -->
   <!-- hero begin -->
   <section class="hero-teamict">
@@ -97,7 +97,7 @@
       </div>
       <div class="choice">
         <img src="./img/Evos_Ferxic_S9.png" alt="">
-        <h2><b>Player not founds</b> <br> <span>ROLE</span></h2>
+        <h2><b>PLAYER NOT FOUND</b> <br> <span>ROLE</span></h2>
       </div>
 
 
@@ -143,18 +143,18 @@
         <h1><b><span>10</span> champions</b></h1>
         <img src="image/about-garis.png" alt="">
         <div class="match-count-container">
-            <div>
-                <h3><span>230+</span> <br> MATCH</h3>
-            </div>
-            <div>
-                <h3><span>70+</span> <br> 2nd/3rd</h3>
-            </div>
-            <div>
-                <h3><span>150+</span> <br> UNKNOWN</h3>
-            </div>
+          <div>
+            <h3><span>230+</span> <br> MATCH</h3>
+          </div>
+          <div>
+            <h3><span>70+</span> <br> 2nd/3rd</h3>
+          </div>
+          <div>
+            <h3><span>150+</span> <br> UNKNOWN</h3>
+          </div>
         </div>
                 
-    </div>
+      </div>
 
     </div>
   </section>
