--- a/teampage1.html
+++ b/teampage1.html
@@ -16,25 +16,25 @@
 
 <body class="custom-btn">
   <div class="hero-navbar">
-    <a href="index.html"><img src="image/logo.png" alt=""></a>
+    <a href="index.html" class="hero-navbar-img"><img src="image/logo.png" alt=""></a>
     <ul class="ul-navbar">
-      <a href="news.html">
-        <li class="news-start">News</li>
-      </a>
-      <a href="teampage1.html">
-        <li>Teams</li>
-      </a>
-      <a href="partners1.html">
-        <li>Partners</li>
-      </a>
-      <a href="about.html">
-        <li>About</li>
-      </a>
-      <a href="SHOP.html">
-        <li><span>VAGOS OFFICIAL SHOP</span></li>
-      </a>
+        <a href="news.html">
+            <li class="news-start">News</li>
+        </a>
+        <a href="teampage1.html">
+            <li>Teams</li>
+        </a>
+        <a href="partners1.html">
+            <li>Partners</li>
+        </a>
+        <a href="about.html">
+            <li>About</li>
+        </a>
+        <a href="SHOP.html" class="hero-navbar-shop">
+            <li><span>VAGOS OFFICIAL SHOP</span></li>
+        </a>
     </ul>
-  </div>
+</div>
 
   <section class="hero-teampage1">
     <div><img src="img/teampage1hero.png" alt= /></div>
