--- a/SHOP.html
+++ b/SHOP.html
@@ -129,7 +129,7 @@
       </div>
     </section>
     
-    <section class="footer">
+<!--     <section class="footer">
       <img src="img/logovagos.png" alt="" />
       
       <div class="footer-info">
@@ -155,6 +155,6 @@
           >
         </h2>
       </div>
-    </section>
+    </section> -->
   </body>
 </html>
