--- a/teampage1.html
+++ b/teampage1.html
@@ -1,104 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <link rel="stylesheet" href="styleR.css" />
+    <link rel="stylesheet" href="custom.css" />
+    <link rel="website icon" type="png" href="img/ONLY-logovagos.png" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>teampage1</title>
+  </head>
 
-<head>
-  <link rel="stylesheet" href="custom.css" />
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>teampage1</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,700;1,800;1,900&family=Poppins:wght@100;300;400;700&display=swap"
-    rel="stylesheet">
-  <script src="script.js"></script>
-</head>
-
-<body class="custom-btn">
-  <div class="hero-navbar">
-    <a href="index.html" class="hero-navbar-img"><img src="image/logo.png" alt=""></a>
-    <ul class="ul-navbar">
-        <a href="news.html">
-            <li class="news-start">News</li>
-        </a>
-        <a href="teampage1.html">
-            <li>Teams</li>
-        </a>
-        <a href="partners1.html">
-            <li>Partners</li>
-        </a>
-        <a href="about.html">
-            <li>About</li>
-        </a>
-        <a href="SHOP.html" class="hero-navbar-shop">
-            <li><span>VAGOS OFFICIAL SHOP</span></li>
-        </a>
-    </ul>
-</div>
-
-  <section class="hero-teampage1">
-    <div><img src="img/teampage1hero.png" alt= /></div>
-  </section>
-
-  <section class="pilihan-teampage1">
-    <h1>
-      LET'S
-      <span>CHECK YOUR <br />
-        FAVORITE</span>
-      DIVISIONS
-    </h1>
-    <div class="team-ml">
+  <body class="custom-btn">
+    <!-- <section class="navbar-main">
+      <img src="img/logovagos.png" alt="team_vagos-removebg-preview.png" />
       <ul>
-        <li>
+        <a href="">NEWS</a>
+        <a href="teampage1.html">TEAMS</a>
+        <a href="">PARTNER</a>
+        <a href="">ABOUT</a>
+        <button onclick="" class="shop-button">VAGOS OFICIAL SHOP</button>
+      </ul>
+    </section> -->
+
+    <section class="hero-teampage1">
+      <div><img src="img/newteampage1hero.png" alt= /></div>
+    </section>
+
+    <section class="pilihan-teampage1">
+      <h1 class="check">
+        LET'S
+        <span
+          >CHECK YOUR <br />
+          FAFORITE</span
+        >
+        DEVISIONS
+      </h1>
+      <div class="team-ml">
+        <div>
           <a href="team-ict.html"><img src="img/teamml.png" alt="" /></a>
-        </li>
-        <li>
+        </div>
+        <div>
           <a href=""><img src="img/teampubg.png" alt="" /></a>
-        </li>
-        <li>
+        </div>
+        <div>
           <a href=""><img src="img/teamff.png" alt="" /></a>
-        </li>
-        <li>
+        </div>
+        <div>
           <a href=""><img src="img/teamlol.png" alt="" /></a>
-        </li>
-        <li>
+        </div>
+        <div>
           <a href=""><img src="img/teamef.png" alt="" /></a>
-        </li>
-      </ul>
-    </div>
-  </section>
+        </div>
+      </div>
+    </section>
 
-  <!-- FOOTER SECTION -->
-  <section class="footer">
-    <img src="image/logo.png" alt="" class="footer-logo" />
-    <div class="footer-info">
-      <h1>TEAM <span>VAGOS</span></h1>
-      <ul>
-        <a href="news.html">
-          <li>News</li>
-        </a>
-        <a href="">
-          <li>Teams</li>
-        </a>
-        <a href="partners1.html">
-          <li>Partners</li>
-        </a>
-        <a href="about.html">
-          <li>About</li>
-        </a>
-      </ul>
-    </div>
-    <div class="footer-sosmed">
-      <img src="image/youtube.png" alt="" />
-      <img src="image/tiktok.png" alt="" />
-      <img src="image/instagram.png" alt="" /><br />
-      <h2>DOWNLOAD APP</h2>
-    </div>
-    <div class="footer-copyright">
-      <h2>Copyright TEAM VAGOS ID 2023</h2>
-    </div>
-  </section>
-  <!-- FOOTER SECTION SELESAI -->
-</body>
-
+    <!-- <section class="footer">
+      <img src="img/logovagos.png" alt="" />
+      <div class="footer-info">
+        <h1>TEAM <span>VAGOS</span></h1>
+        <ul>
+          <li>NEWS</li>
+          <li>TEAM</li>
+          <li>PARTNERS</li>
+          <li>ABOUT</li>
+        </ul>
+      </div>
+      <div class="footer-sosmed">
+        <img src="youtube.png" alt="" />
+        <img src="tiktok.png" alt="" />
+        <img src="instagram.png" alt="" /><br />
+        <h2>DOWNLOAD APP</h2>
+      </div>
+    </section> -->
+  </body>
 </html>
