--- a/t-shirt-shop-page.html
+++ b/t-shirt-shop-page.html
@@ -3,18 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="website icon" type="png" href="img/ONLY-logovagos.png" />
     <title>Document</title>
     <link rel="stylesheet" href="custom.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,700;1,800;1,900&family=Poppins:wght@100;300;400;700&display=swap"
-        rel="stylesheet">
   </head>
   <body class="custom-btn">
     <!-- navbar begin -->
     <section class="navbar-shop">
-      <img src="img/logovagos.png" alt="" />
+      <div class="logo-vagos"><img src="img/logovagos.png" alt="" /></div>
       <div class="nav-shop-a">
         <img src="img/acc logo.png" alt="" />
         <a href="">ACCOUNT</a>
@@ -22,102 +18,126 @@
         <a href="">CART(0)</a>
       </div>
     </section>
+
     <!-- navbar end -->
     <section class="shop-detils">
-      <div class="left">
-        <img src="img/t-shit blue.png" alt="" />
-        <img src="img/t-shit blue.png" alt="" />
-        <img src="img/t-shit blue.png" alt="" />
-        <img src="img/t-shit blue.png" alt="" />
-
-      </div>
-      <div class="right">
-        <img src="img/t-shit blue.png" alt="" />
-        <img src="img/t-shit blue.png" alt="" />
-        <img src="img/t-shit blue.png" alt="" />
-        <img src="img/t-shit blue.png" alt="" />
-        <img src="img/t-shit blue.png" alt="" />
-      </div>
-      <div class="product-desc">
-        <h1 style="font-size: 52px">VAGOS SHOP</h1>
-        <h3 style="font-size: 28px">VAGOS T-SHIRT BLUE EDITION V1.0</h3>
-        <h4 style="font-size: 30px">Japanese Streetwear Concept</h4>
-        <h5 style="font-size: 30px"><b>Rp 99.000,00</b></h5>
-        <img src="img/Line 14.png" alt="" />
-        <p>High Quality Product <br />Cotton Combed 32's <br />free stickers</p>
-        <h3 style="font-size: 30px; font-weight: 900">
-          <b>GET YOUR STYLE UP WITH VAGOS MERCH!</b>
-        </h3>
-        <div>
-          <select id="size-option">
-            <option value="small">S</option>
-            <option value="medium">M</option>
-            <option value="large">L</option>
-            <option value="X-large">XL</option>
-          </select>
-          <button>ADD TO CHART</button>
+      <div class="shop-pic">
+        <div class="left">
+          <img src="img/t-shit blue.png" alt="" />
+          <img src="img/t-shit blue.png" alt="" />
+          <img src="img/t-shit blue.png" alt="" />
+          <img src="img/t-shit blue.png" alt="" />
         </div>
+        <div class="right">
+          <img src="img/t-shit blue.png" alt="" />
+          <img src="img/t-shit blue.png" alt="" />
+          <img src="img/t-shit blue.png" alt="" />
+          <img src="img/t-shit blue.png" alt="" />
+          <img src="img/t-shit blue.png" alt="" />
+        </div>
+      </div>
+
+      <div class="pic-hp">
+        <div class="slides">
+          <div id="slide-1"><img src="img/t-shit blue.png" alt="" /></div>
+          <div id="slide-2"><img src="img/t-shirt white.png" alt="" /></div>
+          <div id="slide-3"><img src="img/t-shirt black.png" alt="" /></div>
+          <div id="slide-4"><img src="img/oficial jersey.png" alt="" /></div>
+          <div id="slide-5"><img src="img/t-shirt vagos.png" alt="" /></div>
+        </div>
+        <a href="#slide-1"><img src="img/t-shirt black.png" alt="" /></a>
+        <a href="#slide-2"><img src="img/t-shit blue.png" alt="" /></a>
+        <a href="#slide-3"><img src="img/t-shirt white.png" alt="" /></a>
+        <a href="#slide-4"><img src="img/t-shirt vagos.png" alt="" /></a>
+        <a href="#slide-5"><img src="img/oficial jersey.png" alt="" /></a>
+      </div>
+      <div class="product-desc-container">
+        <div class="product-desc">
+          <h1>VAGOS SHOP</h1>
+          <h3>VAGOS T-SHIRT BLUE EDITION V1.0</h3>
+          <h4>Japanese Streetwear Concept</h4>
+          <h5><b>Rp 99.000,00</b></h5>
+          <img src="img/Line 14.png" alt="" />
+          <p>
+            High Quality Product <br />Cotton Combed 32's <br />free stickers
+          </p>
+          <h3 style="font-size: 2vmax; font-weight: bold">
+            <b>GET YOUR STYLE UP WITH VAGOS MERCH!</b>
+          </h3>
+          <img src="img/Line 14.png" alt="" />
+        </div>
+
+        <div class="product-desc-input">
+          <div class="input-container">
+            <h1>Size :</h1>
+            <select class="size-option">
+              <option value="small">S</option>
+              <option value="medium">M</option>
+              <option value="large">L</option>
+              <option value="X-large">XL</option>
+            </select>
+          </div>
+          <div class="input-container"></div>
+        </div>
+        <button class="product-desc-button">
+          <h1 style="margin: 0 auto">ADD TO CHART</h1>
+        </button>
       </div>
     </section>
     <section class="related-product">
-        <div class="rp-title">
-            <img src="img/Line 14.png" alt="">
-            <h1>RELATED PRODUCT</h1>
-            <img src="img/Line 14.png" alt="">
+      <div class="rp-title">
+        <img src="img/Line 14.png" alt="" />
+        <h1>RELATED PRODUCT</h1>
+        <img src="img/Line 14.png" alt="" />
+      </div>
+      <div class="rp-main">
+        <div class="rp-card">
+          <img src="img/t-shirt black.png" alt="" />
+        
+
+          <h3>VAGOS T-SHIRT V1.0</h3>
+          <p>WHITE</p>
         </div>
-        <div class="rp-main">
-            <div class="rp-card">
-                <img src="img/t-shirt black.png" alt="">
-                <h3>VAGOS T-SHIRT V1.0</h3>
-                <p>WHITE</p>
-            </div>
-            <div class="rp-card">
-                <img src="img/t-shirt white.png" alt="">
-                <h3>VAGOS T-SHIRT V1.0</h3>
-                <p>WHITE</p>
-            </div>
-            <div class="rp-card">
-                <img src="img/t-shit blue.png" alt="">
-                <h3>VAGOS T-SHIRT V1.0</h3>
-                <p>WHITE</p>
-            </div>
-            <div class="rp-card">
-                <img src="img/accesoris.png" alt="">
-                <h3>VAGOS T-SHIRT V1.0</h3>
-                <p>WHITE</p>
-            </div>
+        <div class="rp-card">
+          <img src="img/t-shirt white.png" alt="" />
+          <h3>VAGOS T-SHIRT V1.0</h3>
+          <p>WHITE</p>
         </div>
+        <div class="rp-card">
+          <img src="img/t-shit blue.png" alt="" />
+          <h3>VAGOS T-SHIRT V1.0</h3>
+          <p>WHITE</p>
+        </div>
+        <div class="rp-card">
+          <img src="img/accesoris.png" alt="" />
+          <h3>VAGOS T-SHIRT V1.0</h3>
+          <p>WHITE</p>
+        </div>
+      </div>
     </section>
-    <!-- FOOTER SECTION -->
-    <section class="footer">
-      <img src="image/logo.png" alt="" class="footer-logo" />
+    <!-- <section class="footer">
+      <img src="img/logovagos.png" alt="" />
       <div class="footer-info">
-          <h1>TEAM <span>VAGOS</span></h1>
-          <ul>
-              <a href="news.html">
-                  <li>News</li>
-              </a>
-              <a href="">
-                  <li>Teams</li>
-              </a>
-              <a href="partners1.html">
-                  <li>Partners</li>
-              </a>
-              <a href="about.html">
-                  <li>About</li>
-              </a>
-          </ul>
+        <h1>TEAM <span>VAGOS</span></h1>
+        <ul>
+          <li>NEWS</li>
+          <li>TEAM</li>
+          <li>PARTNERS</li>
+          <li>ABOUT</li>
+        </ul>
       </div>
       <div class="footer-sosmed">
-          <img src="image/youtube.png" alt="" />
-          <img src="image/tiktok.png" alt="" />
-          <img src="image/instagram.png" alt="" /><br />
-          <h2>DOWNLOAD APP</h2>
+        <img src="youtube.png" alt="" />
+        <img src="tiktok.png" alt="" />
+        <img src="instagram.png" alt="" /><br />
+        <h2>
+          <a
+            href="https://play.google.com/store/search?q=vagos&c=apps"
+            style="color: white; text-decoration: none"
+            >DOWNLOAD APPa</a
+          >
+        </h2>
       </div>
-      <div class="footer-copyright">
-          <h2>Copyright TEAM VAGOS ID 2023</h2>
-      </div>
-  </section>
-  <!-- FOOTER SECTION SELESAI -->
+    </section> -->
   </body>
 </html>
