--- a/SHOP.html
+++ b/SHOP.html
@@ -9,8 +9,8 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,700;1,800;1,900&family=Poppins:wght@100;300;400;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="custom.css">
-  
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="styleR.css">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
@@ -46,6 +46,7 @@
       </div>
       <div class="shop-card">
         <div class="card">
+          <a  href="t-shirt-shop-page.html"></a>
           <img src="img/t-shirt white.png" alt="Avatar" />
           <div class="card-detil">
             <h4>VAGOS T-SHIRT V1.0</h4>
@@ -53,13 +54,15 @@
           </div>
         </div>
         <div class="card">
-          <img src="img/t-shit blue.png" alt="Avatar" />
+          <a  href="t-shirt-shop-page.html"></a>
+          <img  src="img/t-shit blue.png" alt="Avatar" />
           <div class="card-detil">
             <h4><b>VAGOS T-SHIRT V1.0</b></h4>
             <p>BLUE</p>
           </div>
         </div>
         <div class="card">
+          <a  href="t-shirt-shop-page.html"></a>
           <img src="img/t-shirt black.png" alt="Avatar" />
           <div class="card-detil">
             <h4><b>VAGOS T-SHIRT V1.0</b></h4>
@@ -67,6 +70,7 @@
           </div>
         </div>
         <div class="card">
+          <a  href="t-shirt-shop-page.html"></a>
           <img src="img/accesoris.png" alt="Avatar" />
           <div class="card-detil">
             <h><b>VAGOS ACCESORIES</b></h4>
@@ -129,7 +133,7 @@
       </div>
     </section>
     
-<!--     <section class="footer">
+    <section class="footer">
       <img src="img/logovagos.png" alt="" />
       
       <div class="footer-info">
@@ -155,6 +159,6 @@
           >
         </h2>
       </div>
-    </section> -->
+    </section>
   </body>
 </html>
