--- a/t-shirt-shop-page.html
+++ b/t-shirt-shop-page.html
@@ -115,29 +115,41 @@
         </div>
       </div>
     </section>
-    <!-- <section class="footer">
-      <img src="img/logovagos.png" alt="" />
-      <div class="footer-info">
-        <h1>TEAM <span>VAGOS</span></h1>
-        <ul>
-          <li>NEWS</li>
-          <li>TEAM</li>
-          <li>PARTNERS</li>
-          <li>ABOUT</li>
-        </ul>
-      </div>
-      <div class="footer-sosmed">
-        <img src="youtube.png" alt="" />
-        <img src="tiktok.png" alt="" />
-        <img src="instagram.png" alt="" /><br />
-        <h2>
-          <a
-            href="https://play.google.com/store/search?q=vagos&c=apps"
-            style="color: white; text-decoration: none"
-            >DOWNLOAD APPa</a
-          >
-        </h2>
-      </div>
-    </section> -->
+    <!-- FOOTER SECTION -->
+    <section class="footer">
+        <div class="footer-logo">
+            <a href="index.html" ><img src="image/logo.png" alt=""  class="footer-logo-img"/></a>
+        </div>
+        <div class="footer-info">
+            <h1>TEAM <span>VAGOS</span></h1>
+            <ul>
+                <a href="news.html">
+                    <li>News</li>
+                </a>
+                <a href="">
+                    <li>Teams</li>
+                </a>
+                <a href="partners1.html">
+                    <li>Partners</li>
+                </a>
+                <a href="about.html">
+                    <li>About</li>
+                </a>
+            </ul>
+        </div>
+        <div class="footer-sosmed">
+            <a href="https://www.youtube.com/@teamvagosesports772"><img src="image/youtube.png" alt="" /></a>
+            <a href="https://www.tiktok.com/@teamvagos.id"><img src="image/tiktok.png" alt="" /></a>
+            <a href="https://www.instagram.com/teamvagos.id/"><img src="image/instagram.png" alt="" /><br /></a>
+            <a target="_blank" href="https://play.google.com/store/apps/details?id=com.studiokami.vagos">
+                <h2>DOWNLOAD APP</h2>
+            </a>
+        </div>
+        <div class="footer-copyright">
+            <h2>Copyright TEAM VAGOS ID 2023</h2>
+        </div>
+    </section>
+    <!-- FOOTER SECTION SELESAI -->
+    <script src="./script.js"></script>
   </body>
 </html>
