--- a/t-shirt-shop-page.html
+++ b/t-shirt-shop-page.html
@@ -6,6 +6,7 @@
     <link rel="website icon" type="png" href="img/ONLY-logovagos.png" />
     <title>Document</title>
     <link rel="stylesheet" href="custom.css" />
+    <link rel = "stylesheet" href="style.css"/>
   </head>
   <body class="custom-btn">
     <!-- navbar begin -->
