--- a/t-shirt-shop-page.html
+++ b/t-shirt-shop-page.html
@@ -11,7 +11,10 @@
   <body class="custom-btn">
     <!-- navbar begin -->
     <section class="navbar-shop">
-      <div class="logo-vagos"><img src="img/logovagos.png" alt="" /></div>
+      
+      <div class="logo-vagos"><a href="./index.html">
+        <img src="img/logovagos.png" alt="" />
+      </a></div>
       <div class="nav-shop-a">
         <img src="img/acc logo.png" alt="" />
         <a href="">ACCOUNT</a>
