--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         <li>VAGOS OFFICIAL SHOP</li>
                     </a>
                 </div>
-                <div class="hero-navbar-menu">
+                <div class="hero-navbar-menu" onclick="tampilNavbar()">
                     <img src="./image/menu.png" alt="">
                 </div>
             </div>
