--- a/partners1.html
+++ b/partners1.html
@@ -47,7 +47,7 @@
                         <li>VAGOS OFFICIAL SHOP</li>
                     </a>
                 </div>
-                <div class="hero-navbar-menu">
+                <div class="hero-navbar-menu" onclick="tampilNavbar()">
                     <img src="./image/menu.png" alt="">
                 </div>
             </div>
