--- a/team-ict.html
+++ b/team-ict.html
@@ -20,25 +20,39 @@
 <body class="custom-btn">
   <!-- navbar begin -->
   <div class="hero-navbar">
-    <a href="index.html" class="hero-navbar-img"><img src="image/logo.png" alt=""></a>
-    <ul class="ul-navbar">
+    <div class="hero-navbar-logo">
+      <a href="index.html" class="hero-navbar-logo-img"><img src="image/logo.png" alt=""></a>
+    </div>
+    <div class="hero-navbar-nav">
+      <ul class="ul-navbar">
         <a href="news.html">
-            <li class="news-start">News</li>
+          <li class="news-start">News</li>
         </a>
         <a href="teampage1.html">
-            <li>Teams</li>
+          <li>Teams</li>
         </a>
         <a href="partners1.html">
-            <li>Partners</li>
+          <li>Partners</li>
         </a>
         <a href="about.html">
-            <li>About</li>
+          <li>About</li>
         </a>
-        <a href="SHOP.html" class="hero-navbar-shop">
-            <li><span>VAGOS OFFICIAL SHOP</span></li>
+
+      </ul>
+    </div>
+
+    <div class="hero-navbar-feature">
+      <div class="hero-navbar-shop">
+        <a href="SHOP.html">
+          <li>VAGOS OFFICIAL SHOP</li>
         </a>
-    </ul>
-</div>
+      </div>
+      <div class="hero-navbar-menu" onclick="tampilNavbar()">
+        <img src="./image/menu.png" alt="">
+      </div>
+    </div>
+
+  </div>
   <!-- navbar end -->
   <!-- hero begin -->
   <section class="hero-teamict">
