--- a/about.html
+++ b/about.html
@@ -49,7 +49,7 @@
                         <li>VAGOS OFFICIAL SHOP</li>
                     </a>
                 </div>
-                <div class="hero-navbar-menu">
+                <div class="hero-navbar-menu" onclick="tampilNavbar()">
                     <img src="./image/menu.png" alt="">
                 </div>
             </div>
