--- a/about.html
+++ b/about.html
@@ -62,13 +62,17 @@
     <!-- CONTENT SECTION -->
     <section class="about-main-section">
         <div class="about-container">
-            <h2>About US</h2>
-            <p>United by an unbreakable bond, we are more than a team; we are a collective of like-minded individuals
-                who eat, sleep, and breathe esports. Our journey is one of growth, resilience, and the unwavering
-                pursuit of excellence. Every victory is a testament to our dedication; every challenge, a stepping stone
-                toward mastery.
+            <h2>ABOUT US</h2>
+            <p>United by an unbreakable bond, we are more than a team;
+                <br>we are a collective of like-minded individuals
+                who eat, sleep, and breathe esports.
+                <br>Our journey is one of growth, resilience, and the unwavering
+                pursuit of excellence.
+                <br>Every victory is a testament to our dedication; every challenge, a stepping stone toward mastery.
                 <br><br><br>
-                <span>This is Team Vagos Esport - authentically Bali, undeniably formidable.</span>
+                <span>This is Team Vagos Esport
+                    <br>authentically Bali
+                    <br>undeniably formidable.</span>
             </p>
         </div>
         <div class="about-visimisi">
@@ -122,12 +126,12 @@
                 <h3>MATCH</h3>
             </div>
             <div>
-                <h3><span>70+</span> 
-                <h3>2nd/3rd</h3>
+                <h3><span>70+</span>
+                    <h3>2nd/3rd</h3>
             </div>
             <div>
-                <h3><span>150+</span> 
-                <h3>UNKNOWN</h3>
+                <h3><span>150+</span>
+                    <h3>UNKNOWN</h3>
             </div>
         </div>
                 
