--- a/SHOP.html
+++ b/SHOP.html
@@ -19,18 +19,23 @@
     <!-- navbar begin -->
     <section class="navbar-shop">
       <div class="logo-vagos">
-        <a href="./index.html">
-          <img src="img/logovagos.png" alt="" />
-        </a>
+        <a href="teampage1.html"></a><img src="img/logovagos.png" alt="" />
       </div>
-      
+
       <div class="nav-shop-a">
-        <img src="img/acc logo.png" alt="" />
-        <a href="">ACCOUNT</a>
-        <img src="img/shopping-cart (2) 1.png" alt="" />
-        <a href="">CART(0)</a>
+        <div class="nav-shop-aDIV">
+          <a href="teampage1.html"></a>
+          <img src="img/acc logo.png" alt="" />
+          <h4>ACCOUNT</h4>
+        </div>
+
+        <div class="nav-shop-aDIV">
+          <a href="test.html"></a>
+          <img src="img/shopping-cart (2) 1.png" alt="" />
+          <h4>CART(0)</h4>
+        </div>
       </div>
-    </section>
+    </section>
     <!-- navbar end -->
     <!-- hero begin -->
     <section class="hero-shop">
