--- a/SHOP.html
+++ b/SHOP.html
@@ -22,13 +22,13 @@
 
       <div class="nav-shop-a">
         <div class="nav-shop-aDIV">
-          <a href="teampage1.html"></a>
+          <a href=""></a>
           <img src="img/acc logo.png" alt="" />
           <h4>ACCOUNT</h4>
         </div>
 
-        <div class="nav-shop-aDIV">
-          <a href="test.html"></a>
+        <div class="nav-shop-aDIV" onclick="tampilCart()">
+          <a href=""></a>
           <img src="img/shopping-cart (2) 1.png" alt="" />
           <h4>CART(0)</h4>
         </div>
