--- a/SHOP.html
+++ b/SHOP.html
@@ -2,11 +2,13 @@
 <html lang="en">
   <head>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-   
-      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,700;1,800;1,900&family=Poppins:wght@100;300;400;700&display=swap"
-      rel="stylesheet"
-    />
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+      <!-- <link rel="website icon" type="png" 
+      href="img/ONLY-logovagos.png"> -->
+      <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,700;1,800;1,900&family=Poppins:wght@100;300;400;700&display=swap"
+        rel="stylesheet"
+      />
     <link rel="stylesheet" href="custom.css" />
     <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8" />
